Make DcentbGivenWhenThenTester take the jwtGeneration users from the openapi doc and generate autorization header bearer token for each of them with name bearer-jwt- + userId
